--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"[Placeholder for tests]\" && exit 0",
     "build": "babel src -d lib"
   },
   "repository": {
